[package]
name = "inner-thread"
version = "0.1.0"
authors = ["KatoMono Enkeli <k4t0mono@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
rand = "0.7"